IF (WIN32)
    ADD_LIBRARY (glad src/glad.c src/glad_wgl.c)
ELSEIF(APPLE)
    ADD_LIBRARY (glad src/glad.c)
ELSEIF(UNIX)
    ADD_LIBRARY (glad src/glad.c src/glad_glx.c)
ELSE()
    MESSAGE (FATAL_ERROR "Unsupported platform")
ENDIF()

TARGET_INCLUDE_DIRECTORIES(glad PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
